<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/navigation_HomeScreen"
                android:title ="Home Page"
                />
            <item
                android:id="@+id/navigation_AboutMe"
                android:title ="@string/About_Me"
                />
            <item
                android:id="@+id/navigation_ProjectDevelopments"
                android:title ="@string/Project_Developments"
                />
            <item
                android:id="@+id/navigation_ContactForm"
                android:title ="@string/Contact_Form"
                />
        </menu>
    </item>
</menu>