<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeScreen">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/Headshot"
            android:layout_width="251dp"
            android:layout_height="289dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/phoyo"
            app:layout_constraintBottom_toTopOf="@+id/Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.131"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/Linkedin"
            android:layout_width="103dp"
            android:layout_height="106dp"
            android:layout_marginBottom="160dp"
            android:src="@drawable/link"
            app:layout_constraintBottom_toTopOf="@+id/Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.948"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="364dp"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_conversion_absoluteHeight="27dp"
            tools:layout_conversion_absoluteWidth="141dp" />

        <Button
            android:id="@+id/AboutMeBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/About_Me"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Title"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="112dp" />

        <Button
            android:id="@+id/ProjectDevelopmentsBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/Project_Developments"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AboutMeBut"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="112dp" />

        <Button
            android:id="@+id/ContactFormBut"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Contact_Form"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ProjectDevelopmentsBut" />

        <Button
            android:id="@+id/SettingsBut"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ContactFormBut"
            android:layout_marginTop="32dp"
            android:text="Settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ContactFormBut" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>